updated build.xml to point to java rule sets for PMD based on location of rule set in PMD jar since rule set was not in path

--- a/mat/build.xml
+++ b/mat/build.xml
@@ -219,9 +219,9 @@
 	</target>
 	
 	<target name="pmd" depends="init">
-		<pmd>
+	  <pmd>
 		<formatter type="html" toFile="${pmddoc}/pmd_src_report.html" toConsole="true"/>
-	    <ruleset>rulesets/basic.xml</ruleset> 
+	    <ruleset>rulesets/java/basic.xml</ruleset> 
         <fileset dir="src/mat">
             <include name="**/*.java"/>     
         </fileset>
