Adds deploy-tomcat build target

--- a/mat/build.properties
+++ b/mat/build.properties
@@ -25,3 +25,6 @@ mail.file=applicationContext-mail.xml
 #-- Comment this property while doing build in IV&V or for production.
 #for local build use
 tortoise.path=C:/Program Files/TortoiseSVN/bin/
+
+tomcat.home=<path.to.tomcat>
+tomcat.application.deploy.dir=${tomcat.home}/webapps
