--- a/mat/war/WEB-INF/web.xml
+++ b/mat/war/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE web-app
-  PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-  "http://java.sun.com/dtd/web-app_2_3.dtd">
-
-<web-app>
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
+http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+		 version="2.4">
 
 
 	<!-- Default page to serve -->
@@ -15,6 +15,14 @@
 			/WEB-INF/mat-persistence.xml
 		</param-value>
 	</context-param>
+
+	<resource-ref>
+		<description>DB Connection</description>
+		<res-ref-name>jdbc/matapp</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+
 	<filter>
 		<filter-name>hibernateStatsFilter</filter-name>
 		<filter-class>mat.server.HibernateStatisticsFilter</filter-class>
