--- a/mat/war/WEB-INF/web.xml
+++ b/mat/war/WEB-INF/web.xml
@@ -188,6 +188,15 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
 		<url-pattern>/createUser</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>loginServlet</servlet-name>
+		<servlet-class>mat.server.servlet.LoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>loginServlet</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+
 	<session-config>
 		<session-timeout>70</session-timeout>
 	</session-config>
